Added Prometheus and Grafana dashboards support

--- a/CompanyMicroService/src/main/resources/application.properties
+++ b/CompanyMicroService/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
 logging.level.org.springframework=DEBUG
+
+# Management
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.health.show-details=always
