Added Prometheus and Grafana dashboards support

--- a/StockPriceMicroService/src/main/resources/application.properties
+++ b/StockPriceMicroService/src/main/resources/application.properties
@@ -7,11 +7,11 @@ eureka.client.service-url.defaultZone=${EUREKA_SERVER:http://localhost:8761/eure
 server.port=8090
 
 # Data source
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:mem:stockDb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.schema=classpath*:db/hsqldb/schema.sql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${SPRING_STOCK_DATASOURCE_URL}
+spring.datasource.username=${SPRING_STOCK_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_STOCK_DATASOURCE_PASSWORD}
+spring.datasource.schema=classpath*:db/mysqldb/schema.sql
 
 # JPA
 spring.jpa.hibernate.ddl-auto=create
@@ -19,8 +19,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 
 # Management
-management.endpoints.web.exposure.include=prometheus
+management.security.enabled=false
+management.endpoint.metrics.enabled=true
+management.endpoint.refresh.enabled=true
+management.endpoint.info.enabled=true
+management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
+management.endpoint.admin.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus,refresh,metrics,info,health,admin
